fix btn effects

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,14 @@
   </head>
   <body class="bg-mainbgColor text-darkCustomGrey font-Be-Vietnam-Pro">
     <div class="px-2 py-6 md:py-4 md:px-4 3xl:max-w-screen-3xl mx-auto">
+      <!-- Header Section -->
       <header class="flex flex-col gap-6">
         <div
           class="bg-CustomOrange flex justify-center py-3 md:py-4 px-2 rounded-md"
         >
           <a
             href="#"
-            class="flex items-center justify-between text-xs 3xl:text-xl text-white sm:w-fit sm:gap-6"
+            class="flex items-center justify-between text-xs md:text-base 3xl:text-xl text-white sm:gap-6"
             >Free Courses 🌟 Sale Ends Soon, Get It Now
 
             <svg
@@ -59,35 +60,35 @@
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block bg-darkCustomGrey/25"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Home</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Courses</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >About Us</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Pricing</a
                 >
               </li>
               <li>
                 <a
                   href="#"
-                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-customWhite hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Contact</a
                 >
               </li>
@@ -98,12 +99,12 @@
             <div class="flex gap-2 sm:gap-4">
               <a
                 href="#"
-                class="px-2 py-1 md:px-5 md:py-3 rounded-lg hover:bg-CustomOrange/85 hover:-translate-y-1 hover:shadow-lg hover:text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
+                class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >Sign Up</a
               >
               <a
                 href="#"
-                class="px-2 py-1 md:px-5 md:py-3 bg-CustomOrange rounded-lg hover:bg-CustomOrange/85 hover:-translate-y-1 hover:shadow-lg text-white text-sm md:text-base 2xl:text-lg transition-all duration-200"
+                class="px-5 py-3 text-base 3xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >Login</a
               >
             </div>
@@ -187,12 +188,12 @@
               <div class="flex gap-3">
                 <a
                   href="#"
-                  class="px-2.5 py-2 md:px-5 md:py-4 bg-CustomOrange rounded-lg hover:bg-CustomOrange/85 hover:-translate-y-1 text-xs md:text-base hover:shadow-lg text-white transition-all duration-300"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >Explore Courses</a
                 >
                 <a
                   href="#"
-                  class="px-2.5 py-2 md:px-5 md:py-4 text-xs md:text-base rounded-lg hover:bg-CustomOrange/85 hover:-translate-y-1 hover:shadow-lg hover:text-white ttransition-all duration-200"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                   >View Pricing</a
                 >
               </div>
@@ -459,7 +460,7 @@
               </div>
               <div class="sm:col-start-6 flex sm:justify-end items-end">
                 <button
-                  class="px-5 py-3 bg-white rounded-lg transition-all duration-300 hover:bg-CustomOrange/5 hover:-translate-y-1 hover:shadow-custom-btn"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >
                   View All
                 </button>
@@ -716,7 +717,7 @@
               </div>
               <div class="sm:col-start-6 flex sm:justify-end items-end">
                 <button
-                  class="px-5 py-3 bg-white rounded-lg transition-all duration-300 hover:bg-CustomOrange/5 hover:-translate-y-1 hover:shadow-custom-btn"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >
                   View All
                 </button>
@@ -741,18 +742,18 @@
                     >
                       <div class="flex gap-2">
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           4 Weeks
                         </div>
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           Beginner
                         </div>
                       </div>
                       <div>
-                        <p class="text-sm font-medium md:text-base">
+                        <p class="text-sm font-medium md:text-sm">
                           By John Smith
                         </p>
                       </div>
@@ -798,18 +799,18 @@
                     >
                       <div class="flex gap-2">
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           6 Weeks
                         </div>
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           Intermediate
                         </div>
                       </div>
                       <div>
-                        <p class="text-sm font-medium md:text-base">
+                        <p class="text-sm font-medium md:text-sm">
                           By Emily Johnson
                         </p>
                       </div>
@@ -856,18 +857,18 @@
                     >
                       <div class="flex gap-2">
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           8 Weeks
                         </div>
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           Intermediate
                         </div>
                       </div>
                       <div>
-                        <p class="text-sm font-medium md:text-base">
+                        <p class="text-sm font-medium md:text-sm">
                           By David Brown
                         </p>
                       </div>
@@ -912,18 +913,18 @@
                     >
                       <div class="flex gap-2">
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           10 Weeks
                         </div>
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           Beginner
                         </div>
                       </div>
                       <div>
-                        <p class="text-sm font-medium md:text-base">
+                        <p class="text-sm font-medium md:text-sm">
                           By Sarah Thompson
                         </p>
                       </div>
@@ -969,18 +970,18 @@
                     >
                       <div class="flex gap-2">
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           10 Weeks
                         </div>
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           Intermediate
                         </div>
                       </div>
                       <div>
-                        <p class="text-sm font-medium md:text-base">
+                        <p class="text-sm font-medium md:text-sm">
                           By Michael Adams
                         </p>
                       </div>
@@ -1026,18 +1027,18 @@
                     >
                       <div class="flex gap-2">
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           6 Weeks
                         </div>
                         <div
-                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-base"
+                          class="text-lightCustomGrey border px-3 py-1.5 rounded-md text-sx md:text-sm"
                         >
                           Advance
                         </div>
                       </div>
                       <div>
-                        <p class="text-sm font-medium md:text-base">
+                        <p class="text-sm font-medium md:text-sm">
                           By Jennifer Wilson
                         </p>
                       </div>
@@ -1085,7 +1086,7 @@
               </div>
               <div class="sm:col-start-6 flex sm:justify-end items-end">
                 <button
-                  class="px-5 py-3 bg-white rounded-lg transition-all duration-300 hover:bg-CustomOrange/5 hover:-translate-y-1 hover:shadow-custom-btn"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >
                   View All
                 </button>
@@ -1093,7 +1094,9 @@
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
               <!-- Testimonial 1 -->
-              <div class="bg-white rounded-lg border">
+              <div
+                class="bg-white rounded-lg border hover:-translate-y-2 hover:shadow-lg transition-all duration-300"
+              >
                 <div class="p-5 md:p-10 text-lightCustomGrey">
                   <p class="text-sm md:text-base">
                     The web design course provided a solid foundation for me.
@@ -1111,7 +1114,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm"
                     >
                       Read Full Story
                     </button>
@@ -1119,7 +1122,9 @@
                 </div>
               </div>
               <!-- Testimonial 2 -->
-              <div class="bg-white rounded-lg border">
+              <div
+                class="bg-white rounded-lg border hover:-translate-y-2 hover:shadow-lg transition-all duration-300"
+              >
                 <div class="p-5 md:p-10 text-lightCustomGrey">
                   <p class="text-sm md:text-base">
                     The UI/UX design course exceeded my expectations. The
@@ -1137,7 +1142,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm"
                     >
                       Read Full Story
                     </button>
@@ -1145,7 +1150,9 @@
                 </div>
               </div>
               <!-- Testimonial 3 -->
-              <div class="bg-white rounded-lg border">
+              <div
+                class="bg-white rounded-lg border hover:-translate-y-2 hover:shadow-lg transition-all duration-300"
+              >
                 <div class="p-5 md:p-10 text-lightCustomGrey">
                   <p class="text-sm md:text-base">
                     The mobile app development course was fantastic! The
@@ -1163,7 +1170,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm"
                     >
                       Read Full Story
                     </button>
@@ -1171,7 +1178,9 @@
                 </div>
               </div>
               <!-- Testimonial 4 -->
-              <div class="bg-white rounded-lg border">
+              <div
+                class="bg-white rounded-lg border hover:-translate-y-2 hover:shadow-lg transition-all duration-300"
+              >
                 <div class="p-5 md:p-10 text-lightCustomGrey">
                   <p class="text-sm md:text-base">
                     I enrolled in the graphic design course as a beginner, and
@@ -1192,7 +1201,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm"
                     >
                       Read Full Story
                     </button>
