--- a/public/index.html
+++ b/public/index.html
@@ -1114,7 +1114,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white"
                     >
                       Read Full Story
                     </button>
@@ -1142,7 +1142,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white"
                     >
                       Read Full Story
                     </button>
@@ -1170,7 +1170,7 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white"
                     >
                       Read Full Story
                     </button>
@@ -1201,11 +1201,61 @@
                   </div>
                   <div>
                     <button
-                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm"
+                      class="bg-customWhite rounded-md px-3 py-2 text-sm md:text-base hover:-translate-y-1 hover:shadow-lg transition-all duration-300 active:translate-y-0 active:shadow-sm hover:bg-CustomOrange hover:text-white"
                     >
                       Read Full Story
                     </button>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- Pricing Section -->
+        <section>
+          <div class="flex flex-col gap-20">
+            <div
+              class="grid grid-cols-1 sm:grid-cols-6 gap-5 sm:gap-0 items-end justify-end"
+            >
+              <div class="sm:col-span-4 flex flex-col gap-2">
+                <h2 class="text-2xl md:text-4xl 3xl:text-5xl font-semibold">
+                  Our Pricing
+                </h2>
+                <p class="text-lightCustomGrey text-sm md:text-base">
+                  Lorem ipsum dolor sit amet consectetur. Tempus tincidunt etiam
+                  eget elit id imperdiet et. Cras eu sit dignissim lorem nibh
+                  et. Ac cum eget habitasse in velit fringilla feugiat senectus
+                  in.
+                </p>
+              </div>
+              <div
+                class="sm:col-span-2 flex w-fit justify-self-end self-end gap-2 bg-white p-3 rounded-lg"
+              >
+                <button
+                  class="px-5 py-3 text-base 3xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                >
+                  Monthly
+                </button>
+                <button
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                >
+                  Yearly
+                </button>
+              </div>
+            </div>
+            <div class="rounded-2xl bg-white p-20 flex gap-8">
+              <div class="flex px-7 py-12 bg-customWhite w-full">
+                <div
+                  class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg"
+                >
+                  Free Plan
+                </div>
+              </div>
+              <div class="flex px-7 py-12 bg-customWhite w-full">
+                <div
+                  class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg"
+                >
+                  Free Plan
                 </div>
               </div>
             </div>
