--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
         </nav>
       </header>
 
-      <main class="lg:px-12 px-3 flex flex-col gap-20 pb-20">
+      <main class="lg:px-12 px-3 flex flex-col gap-28 pb-20">
         <!-- Heros Section -->
         <section>
           <div class="grid grid-cols-6 min-h-96 mt-6">
@@ -1232,30 +1232,386 @@
                 class="sm:col-span-2 flex w-fit justify-self-end self-end gap-2 bg-white p-3 rounded-lg"
               >
                 <button
-                  class="px-5 py-3 text-base 3xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-CustomOrange text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-lg hover:shadow-CustomOrange/25 active:translate-y-0 active:shadow-lg"
                 >
                   Monthly
                 </button>
                 <button
-                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-CustomOrange hover:text-white hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
+                  class="px-5 py-3 text-base 3xl:text-lg bg-white hover:bg-customWhite hover:-translate-y-1 transition-all duration-300 rounded-lg inline-block hover:shadow-xl active:translate-y-0 active:shadow-lg"
                 >
                   Yearly
                 </button>
               </div>
             </div>
             <div class="rounded-2xl bg-white p-20 flex gap-8">
-              <div class="flex px-7 py-12 bg-customWhite w-full">
+              <!-- Card 1 -->
+              <div
+                class="flex px-7 py-12 bg-gray-200/20 w-full flex-col text-center gap-12 rounded-md border"
+              >
                 <div
-                  class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg"
+                  class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg border"
                 >
                   Free Plan
                 </div>
+                <div>
+                  <p class="font-medium">
+                    <span class="font-semibold text-6xl">$0</span>/month
+                  </p>
+                </div>
+                <div>
+                  <div
+                    class="flex flex-col gap-6 p-8 bg-white border rounded-t-lg"
+                  >
+                    <h3 class="font-medium text-lg">Available Features</h3>
+                    <div class="flex flex-col gap-5">
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">Access to selected free courses.</p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">
+                          Limited course materials and resources.
+                        </p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">Basic community support.</p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">No certification upon completion.</p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">
+                          Access to exclusive Pro Plan community forums.
+                        </p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div class="border rounded-md inline-block p-1">
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              d="M5.024 4.176a.6.6 0 10-.848.848L7.15 8l-2.975 2.976a.6.6 0 00.848.848L8 8.85l2.976 2.975a.6.6 0 00.848-.848L8.85 8l2.975-2.976a.6.6 0 10-.848-.848L8 7.15 5.024 4.176z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">
+                          Access to exclusive Pro Plan community forums.
+                        </p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div class="border rounded-md inline-block p-1">
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              d="M5.024 4.176a.6.6 0 10-.848.848L7.15 8l-2.975 2.976a.6.6 0 00.848.848L8 8.85l2.976 2.975a.6.6 0 00.848-.848L8.85 8l2.975-2.976a.6.6 0 10-.848-.848L8 7.15 5.024 4.176z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">
+                          Early access to new courses and updates.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <button
+                      class="bg-CustomOrange w-full py-5 px-6 rounded-b-lg text-white text-sm"
+                    >
+                      Get Started
+                    </button>
+                  </div>
+                </div>
               </div>
-              <div class="flex px-7 py-12 bg-customWhite w-full">
+              <!-- Card 2 -->
+              <div
+                class="flex px-7 py-12 bg-gray-200/20 w-full flex-col text-center gap-12 rounded-md border"
+              >
                 <div
-                  class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg"
+                  class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg border"
                 >
                   Free Plan
+                </div>
+                <div>
+                  <p class="font-medium">
+                    <span class="font-semibold text-6xl">$0</span>/month
+                  </p>
+                </div>
+                <div>
+                  <div
+                    class="flex flex-col gap-6 p-8 bg-white border rounded-t-lg"
+                  >
+                    <h3 class="font-medium text-lg">Available Features</h3>
+                    <div class="flex flex-col gap-5">
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">Access to selected free courses.</p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">
+                          Limited course materials and resources.
+                        </p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">Basic community support.</p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">No certification upon completion.</p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">
+                          Access to exclusive Pro Plan community forums.
+                        </p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div class="border rounded-md inline-block p-1">
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              d="M5.024 4.176a.6.6 0 10-.848.848L7.15 8l-2.975 2.976a.6.6 0 00.848.848L8 8.85l2.976 2.975a.6.6 0 00.848-.848L8.85 8l2.975-2.976a.6.6 0 10-.848-.848L8 7.15 5.024 4.176z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">
+                          Access to exclusive Pro Plan community forums.
+                        </p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div class="border rounded-md inline-block p-1">
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              d="M5.024 4.176a.6.6 0 10-.848.848L7.15 8l-2.975 2.976a.6.6 0 00.848.848L8 8.85l2.976 2.975a.6.6 0 00.848-.848L8.85 8l2.975-2.976a.6.6 0 10-.848-.848L8 7.15 5.024 4.176z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">
+                          Early access to new courses and updates.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div>
+                    <button
+                      class="bg-CustomOrange w-full py-5 px-6 rounded-b-lg text-white text-sm"
+                    >
+                      Get Started
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
