--- a/public/index.html
+++ b/public/index.html
@@ -1436,11 +1436,11 @@
                 <div
                   class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg border"
                 >
-                  Free Plan
+                  Pro Plan
                 </div>
                 <div>
                   <p class="font-medium">
-                    <span class="font-semibold text-6xl">$0</span>/month
+                    <span class="font-semibold text-6xl">$79</span>/month
                   </p>
                 </div>
                 <div>
@@ -1469,7 +1469,7 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">Access to selected free courses.</p>
+                        <p class="text-sm">Unlimited access to all courses.</p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
@@ -1492,7 +1492,7 @@
                           </svg>
                         </div>
                         <p class="text-sm">
-                          Limited course materials and resources.
+                          Unlimited course materials and resources.
                         </p>
                       </div>
                       <div
@@ -1515,7 +1515,9 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">Basic community support.</p>
+                        <p class="text-sm">
+                          Priority support from instructors.
+                        </p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
@@ -1537,13 +1539,35 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">No certification upon completion.</p>
+                        <p class="text-sm">Course completion certificates.</p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
                       >
                         <div
                           class="bg-lightCustomOrange inline-block p-1 rounded-md"
+                        >
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm">Ad-free experience.</p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div
+                          class="border rounded-md inline-block p-1 bg-lightCustomOrange"
                         >
                           <svg
                             width="16"
@@ -1566,7 +1590,9 @@
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
                       >
-                        <div class="border rounded-md inline-block p-1">
+                        <div
+                          class="border rounded-md inline-block p-1 bg-lightCustomOrange"
+                        >
                           <svg
                             width="16"
                             height="16"
@@ -1574,27 +1600,9 @@
                             xmlns="http://www.w3.org/2000/svg"
                           >
                             <path
-                              d="M5.024 4.176a.6.6 0 10-.848.848L7.15 8l-2.975 2.976a.6.6 0 00.848.848L8 8.85l2.976 2.975a.6.6 0 00.848-.848L8.85 8l2.975-2.976a.6.6 0 10-.848-.848L8 7.15 5.024 4.176z"
-                              fill="#262626"
-                            />
-                          </svg>
-                        </div>
-                        <p class="text-sm">
-                          Access to exclusive Pro Plan community forums.
-                        </p>
-                      </div>
-                      <div
-                        class="p-3 flex gap-2 border rounded-lg items-center"
-                      >
-                        <div class="border rounded-md inline-block p-1">
-                          <svg
-                            width="16"
-                            height="16"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                          >
-                            <path
-                              d="M5.024 4.176a.6.6 0 10-.848.848L7.15 8l-2.975 2.976a.6.6 0 00.848.848L8 8.85l2.976 2.975a.6.6 0 00.848-.848L8.85 8l2.975-2.976a.6.6 0 10-.848-.848L8 7.15 5.024 4.176z"
+                              fill-rule="evenodd"
+                              clip-rule="evenodd"
+                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
                               fill="#262626"
                             />
                           </svg>
@@ -1617,6 +1625,8 @@
             </div>
           </div>
         </section>
+        <!-- FAQ Section -->
+        <section></section>
       </main>
     </div>
   </body>
