--- a/public/index.html
+++ b/public/index.html
@@ -1243,10 +1243,12 @@
                 </button>
               </div>
             </div>
-            <div class="rounded-2xl bg-white p-20 flex gap-8">
+            <div
+              class="rounded-2xl bg-white p-5 md:p-10 xl:p-20 grid grid-cols-1 md:grid-cols-2 gap-8"
+            >
               <!-- Card 1 -->
               <div
-                class="flex px-7 py-12 bg-gray-200/20 w-full flex-col text-center gap-12 rounded-md border"
+                class="flex px-3 py-8 xl:px-7 xl:py-12 bg-gray-200/20 w-full flex-col text-center gap-12 rounded-md border"
               >
                 <div
                   class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg border"
@@ -1260,7 +1262,7 @@
                 </div>
                 <div>
                   <div
-                    class="flex flex-col gap-6 p-8 bg-white border rounded-t-lg"
+                    class="flex flex-col gap-6 p-5 xl:p-8 bg-white border rounded-t-lg"
                   >
                     <h3 class="font-medium text-lg">Available Features</h3>
                     <div class="flex flex-col gap-5">
@@ -1284,7 +1286,9 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">Access to selected free courses.</p>
+                        <p class="text-sm 2xl:text-lg text-start">
+                          Access to selected free courses.
+                        </p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
@@ -1306,7 +1310,7 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">
+                        <p class="text-sm 2xl:text-lg text-start">
                           Limited course materials and resources.
                         </p>
                       </div>
@@ -1330,7 +1334,9 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">Basic community support.</p>
+                        <p class="text-sm 2xl:text-lg text-start">
+                          Basic community support.
+                        </p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
@@ -1352,7 +1358,9 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">No certification upon completion.</p>
+                        <p class="text-sm 2xl:text-lg text-start">
+                          No certification upon completion.
+                        </p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
@@ -1374,7 +1382,7 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">
+                        <p class="text-sm 2xl:text-lg text-start">
                           Access to exclusive Pro Plan community forums.
                         </p>
                       </div>
@@ -1394,7 +1402,7 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">
+                        <p class="text-sm 2xl:text-lg text-start">
                           Access to exclusive Pro Plan community forums.
                         </p>
                       </div>
@@ -1414,7 +1422,7 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">
+                        <p class="text-sm 2xl:text-lg text-start">
                           Early access to new courses and updates.
                         </p>
                       </div>
@@ -1431,21 +1439,21 @@
               </div>
               <!-- Card 2 -->
               <div
-                class="flex px-7 py-12 bg-gray-200/20 w-full flex-col text-center gap-12 rounded-md border"
+                class="flex px-3 py-8 xl:px-7 xl:py-12 bg-gray-200/20 w-full flex-col text-center gap-12 rounded-md border"
               >
                 <div
                   class="bg-lightCustomOrange w-full py-3 px-5 text-center font-medium text-xl rounded-lg border"
                 >
-                  Pro Plan
+                  Free Plan
                 </div>
                 <div>
                   <p class="font-medium">
-                    <span class="font-semibold text-6xl">$79</span>/month
+                    <span class="font-semibold text-6xl">$0</span>/month
                   </p>
                 </div>
                 <div>
                   <div
-                    class="flex flex-col gap-6 p-8 bg-white border rounded-t-lg"
+                    class="flex flex-col gap-6 p-5 xl:p-8 bg-white border rounded-t-lg"
                   >
                     <h3 class="font-medium text-lg">Available Features</h3>
                     <div class="flex flex-col gap-5">
@@ -1469,30 +1477,8 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">Unlimited access to all courses.</p>
-                      </div>
-                      <div
-                        class="p-3 flex gap-2 border rounded-lg items-center"
-                      >
-                        <div
-                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
-                        >
-                          <svg
-                            width="16"
-                            height="16"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                          >
-                            <path
-                              fill-rule="evenodd"
-                              clip-rule="evenodd"
-                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
-                              fill="#262626"
-                            />
-                          </svg>
-                        </div>
-                        <p class="text-sm">
-                          Unlimited course materials and resources.
+                        <p class="text-sm 2xl:text-lg text-start">
+                          Access to selected free courses.
                         </p>
                       </div>
                       <div
@@ -1515,8 +1501,8 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">
-                          Priority support from instructors.
+                        <p class="text-sm 2xl:text-lg text-start">
+                          Limited course materials and resources.
                         </p>
                       </div>
                       <div
@@ -1539,7 +1525,9 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">Course completion certificates.</p>
+                        <p class="text-sm 2xl:text-lg text-start">
+                          Basic community support.
+                        </p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
@@ -1561,13 +1549,15 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">Ad-free experience.</p>
+                        <p class="text-sm 2xl:text-lg text-start">
+                          No certification upon completion.
+                        </p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
                       >
                         <div
-                          class="border rounded-md inline-block p-1 bg-lightCustomOrange"
+                          class="bg-lightCustomOrange inline-block p-1 rounded-md"
                         >
                           <svg
                             width="16"
@@ -1583,16 +1573,14 @@
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">
+                        <p class="text-sm 2xl:text-lg text-start">
                           Access to exclusive Pro Plan community forums.
                         </p>
                       </div>
                       <div
                         class="p-3 flex gap-2 border rounded-lg items-center"
                       >
-                        <div
-                          class="border rounded-md inline-block p-1 bg-lightCustomOrange"
-                        >
+                        <div class="border rounded-md inline-block p-1">
                           <svg
                             width="16"
                             height="16"
@@ -1600,14 +1588,32 @@
                             xmlns="http://www.w3.org/2000/svg"
                           >
                             <path
-                              fill-rule="evenodd"
-                              clip-rule="evenodd"
-                              d="M13.364 3.323a.6.6 0 01.114.84l-6.4 8.4a.6.6 0 01-.902.061l-3.6-3.6a.6.6 0 11.849-.848l3.114 3.114 5.984-7.853a.6.6 0 01.841-.114z"
+                              d="M5.024 4.176a.6.6 0 10-.848.848L7.15 8l-2.975 2.976a.6.6 0 00.848.848L8 8.85l2.976 2.975a.6.6 0 00.848-.848L8.85 8l2.975-2.976a.6.6 0 10-.848-.848L8 7.15 5.024 4.176z"
                               fill="#262626"
                             />
                           </svg>
                         </div>
-                        <p class="text-sm">
+                        <p class="text-sm 2xl:text-lg text-start">
+                          Access to exclusive Pro Plan community forums.
+                        </p>
+                      </div>
+                      <div
+                        class="p-3 flex gap-2 border rounded-lg items-center"
+                      >
+                        <div class="border rounded-md inline-block p-1">
+                          <svg
+                            width="16"
+                            height="16"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                          >
+                            <path
+                              d="M5.024 4.176a.6.6 0 10-.848.848L7.15 8l-2.975 2.976a.6.6 0 00.848.848L8 8.85l2.976 2.975a.6.6 0 00.848-.848L8.85 8l2.975-2.976a.6.6 0 10-.848-.848L8 7.15 5.024 4.176z"
+                              fill="#262626"
+                            />
+                          </svg>
+                        </div>
+                        <p class="text-sm 2xl:text-lg text-start">
                           Early access to new courses and updates.
                         </p>
                       </div>
