add faq section

--- a/public/index.html
+++ b/public/index.html
@@ -1632,7 +1632,236 @@
           </div>
         </section>
         <!-- FAQ Section -->
-        <section></section>
+        <section>
+          <div
+            class="bg-white p-6 xl:p-20 flex flex-col md:flex-row gap-10 rounded-xl"
+          >
+            <div class="flex flex-col gap-5">
+              <div class="flex flex-col gap-2">
+                <h2 class="text-3xl md:text-4xl xl:text-5xl font-semibold">
+                  Frequently Asked Questions
+                </h2>
+                <p class="text-sm md:text-base xl:text-lg">
+                  Still you have any questions? Contact our Team via
+                  support@skillbridge.com
+                </p>
+              </div>
+              <div>
+                <button
+                  class="px-5 py-3 border rounded-md text-sm md:text-base xl:text-lg hover:bg-CustomOrange transition-all duration-200 hover:-translate-y-2 hover:shadow-xl hover:text-white"
+                >
+                  See All FAQ’s
+                </button>
+              </div>
+            </div>
+            <div class="flex flex-col gap-5">
+              <!-- box--1 -->
+              <div class="border p-6 rounded-xl flex flex-col gap-5">
+                <!-- box 1 -->
+                <div
+                  class="grid grid-cols-5 items-center justify-end gap-7 border-b pb-5"
+                >
+                  <div class="col-span-4">
+                    <p class="font-medium md:text-lg xl:text-xl">
+                      Can I enroll in multiple courses at once?
+                    </p>
+                  </div>
+                  <div
+                    class="flex items-center justify-center col-span-1 justify-self-end"
+                  >
+                    <div
+                      class="p-3 bg-lightCustomOrange rounded-lg cursor-pointer hover:bg-CustomOrange/30 transition-all duration-200"
+                    >
+                      <svg
+                        width="28"
+                        height="28"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M7 20.116L14 14m6.117-6.116L14 14m0 0L7.884 7.884M14 14l6.117 6.116"
+                          stroke="#262626"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+                <!-- box 2 -->
+                <div>
+                  <p
+                    class="text-lightCustomGrey text-sm md:text-base xl:text-lg"
+                  >
+                    Absolutely! You can enroll in multiple courses
+                    simultaneously and access them at your convenience.
+                  </p>
+                </div>
+                <!-- box 3 -->
+                <div
+                  class="grid grid-cols-5 items-center justify-end gap-7 bg-mainbgColor p-6 border rounded-xl"
+                >
+                  <div class="col-span-4">
+                    <p class="font-medium md:text-lg xl:text-xl">
+                      Enrollment Process for Different Courses
+                    </p>
+                  </div>
+                  <div
+                    class="flex items-center justify-center col-span-1 justify-self-end"
+                  >
+                    <div
+                      class="p-3 bg-white rounded-lg hover:bg-lightCustomGrey/20 cursor-pointer duration-200 transition-all"
+                    >
+                      <svg
+                        width="21"
+                        height="21"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          fill-rule="evenodd"
+                          clip-rule="evenodd"
+                          d="M3.5 10.5a.75.75 0 01.75-.75h10.638L10.73 5.79a.75.75 0 111.04-1.08l5.5 5.25a.75.75 0 010 1.08l-5.5 5.25a.75.75 0 11-1.04-1.08l4.158-3.96H4.25a.75.75 0 01-.75-.75z"
+                          fill="#000"
+                        />
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- box--2 -->
+              <div
+                class="grid grid-cols-5 items-center justify-end gap-7 p-6 rounded-xl border"
+              >
+                <div class="col-span-4">
+                  <p class="font-medium md:text-lg xl:text-xl">
+                    What kind of support can I expect from instructors?
+                  </p>
+                </div>
+                <div
+                  class="flex items-center justify-center col-span-1 justify-self-end"
+                >
+                  <div
+                    class="p-3 bg-lightCustomOrange rounded-lg cursor-pointer hover:bg-CustomOrange/30 transition-all duration-200"
+                  >
+                    <svg
+                      width="20"
+                      height="20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M5 10h5m5 0h-5m0 0V5m0 5v5"
+                        stroke="#262626"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- box--3 -->
+              <div
+                class="grid grid-cols-5 items-center justify-end gap-7 border rounded-xl p-6"
+              >
+                <div class="col-span-4">
+                  <p class="font-medium md:text-lg xl:text-xl">
+                    Are the courses self-paced or do they have specific start
+                    and end dates?
+                  </p>
+                </div>
+                <div
+                  class="flex items-center justify-center col-span-1 justify-self-end"
+                >
+                  <div
+                    class="p-3 bg-lightCustomOrange rounded-lg cursor-pointer hover:bg-CustomOrange/30 transition-all duration-200"
+                  >
+                    <svg
+                      width="20"
+                      height="20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M5 10h5m5 0h-5m0 0V5m0 5v5"
+                        stroke="#262626"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- box--4 -->
+              <div
+                class="grid grid-cols-5 items-center justify-end gap-7 border rounded-xl p-6"
+              >
+                <div class="col-span-4">
+                  <p class="font-medium md:text-lg xl:text-xl">
+                    Are there any prerequisites for the courses?
+                  </p>
+                </div>
+                <div
+                  class="flex items-center justify-center col-span-1 justify-self-end"
+                >
+                  <div
+                    class="p-3 bg-lightCustomOrange rounded-lg cursor-pointer hover:bg-CustomOrange/30 transition-all duration-200"
+                  >
+                    <svg
+                      width="20"
+                      height="20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M5 10h5m5 0h-5m0 0V5m0 5v5"
+                        stroke="#262626"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+              <!-- box--5 -->
+              <div
+                class="grid grid-cols-5 items-center justify-end gap-7 border rounded-xl p-6"
+              >
+                <div class="col-span-4">
+                  <p class="font-medium md:text-lg xl:text-xl">
+                    Can I download the course materials for offline access?
+                  </p>
+                </div>
+                <div
+                  class="flex items-center justify-center col-span-1 justify-self-end"
+                >
+                  <div
+                    class="p-3 bg-lightCustomOrange rounded-lg cursor-pointer hover:bg-CustomOrange/30 transition-all duration-200"
+                  >
+                    <svg
+                      width="20"
+                      height="20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M5 10h5m5 0h-5m0 0V5m0 5v5"
+                        stroke="#262626"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
   </body>
